--- a/tests/cpp/CMakeLists.txt
+++ b/tests/cpp/CMakeLists.txt
@@ -3,7 +3,7 @@ project(udpcpp VERSION 0.1.0 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 17)
 
 
-add_executable(udpcpp main.cpp UdpHandler.hpp Geodetic.cpp Simulation.cpp)
+add_executable(udpcpp main.cpp Geodetic.cpp Simulation.cpp)
 
 target_include_directories(udpcpp PRIVATE include 3rdparty/include)
 
